+ refactor for standardized AbstractLightBlock  + cleanup CC:T integration  + general cleanup